# ai-avatar

./: .gitignore  README.md  README_EN.md
Unity-Scripts/Agent/: VRMAgent.cs
Unity-Scripts/Camera/: CameraController.cs  TPSCameraController.cs
Unity-Scripts/Core/: WavUtility.cs
Unity-Scripts/Core/Chat/: ChatHistoryManager.cs  ChatUIManager.cs  UserMemoryManager.cs
Unity-Scripts/Core/MotionSystem/: AutoPlayAnimation.cs  BvhRuntimePlayer.cs  FBXPostprocessor.cs  MotionManager.cs  MotionPlayback.cs  MotionPlaybackSetup.cs  README_MotionSetup.md  TextToMotionManager.cs
Unity-Scripts/Core/STT/: SpeechToTextManager.cs
Unity-Scripts/Core/TTS/: ITtsProvider.cs  TtsHttpProvider.cs  TtsManager.cs
Unity-Scripts/Test/: VRMExpressionTest.cs
avatar-agent/: micromamba_setup.sh  pyproject.toml  run.sh  run_train.sh
avatar-agent/config/: VRM_Idle.yaml  VRM_Idle_SAC.yaml
dataset/: fbx_to_bvh.py
python_backend/: .env.example  README.md  app.py  config.py  config.yaml  ollama.sh  poetry.md  poetry.sh  pyproject.toml  run.sh  test.py
python_backend/backend_utils/: __init__.py  bvh_converter.py  convert_bvh_to_fbx.py  xyz_to_bvh.py
python_backend/backend_utils/ik_bvh_converter/: Animation.py  AnimationStructure.py  BVH.py  BVH_mod.py  InverseKinematics.py  __init__.py  converter.py  joints2bvh.py  remove_fs.py
python_backend/charts/: models.ipynb
python_backend/clean_vits/: VC_inference.py  config.json  tts_cli.py
python_backend/services/: __init__.py  motion_service.py  tts_service.py
python_backend/t2m/: __init__.py  generator.py  light_generator.py  momask_generator.py
python_backend/tests/: bvh_to_fbx.py  fbx_to_bvh.py  stt.sh  t2m.sh  temp_motion_5729.bvh  temp_motion_5729.fbx  test.bvh  test2.bvh  test3.bvh  test3.fbx  test4.fbx  tts.sh
python_backend/tests/bvh/: childish.fbx  childish_converted.bvh  childish_test.fbx  test3.bvh  test3_converted.fbx
python_backend/tests/fbx/: Angry.fbx  Angry_converted.fbx  Angry_converted2.bvh  Angry_converted2.fbx
python_backend/vits/: README.md  cmd_inference.py  config.json  tts_cli.py
python_backend/vits/monotonic_align/: core.c
