[project]
name = "avatar-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "JiaLong0209",email = "smt02091395@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.1,<=3.10.12"
# requires-python = ">=3.10,<3.12"
dependencies = [
    "mlagents (==1.1.0)",
    "setuptools (>=82.0.0,<83.0.0)",
    "torch (==2.2.1)",
    "grpcio (<=1.48.2)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
