[project]
name = "ai-desk-avatar"
version = "0.1.0"
description = ""
authors = [
    {name = "JiaLong0209",email = "smt02091395@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "gtts (>=2.5.4,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=1.26,<2.0)",
    "openai-clip (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "bpy (>=4.5.3,<5.0.0)",
    "setuptools (==65.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
